Closed Bug 1647454 Opened 5 years ago Closed 5 years ago

Fix usage of GetFrameElementInternal for popup blocker in nsDocShell::DoURILoad

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Fission Milestone M6b
Tracking Status
firefox81 --- fixed

People

(Reporter: kmag, Assigned: smacleod)

References

Details

Attachments

(1 file)

It can't do the right thing when the parent frame is cross-process.

Severity: -- → S3
Priority: -- → P3
Fission Milestone: --- → M6b

This particular callsite can probably be fixed by including the popup permission for each WindowContext on the WindowContext, and then checking the parent window context in nsDocShell.

Fission Milestone: M6b → M6c
Assignee: nobody → afarre
Status: NEW → ASSIGNED
Fission Milestone: M6c → M6b

Try is tentatively looking good.

Flags: needinfo?(nkochar)

Steven, can you pick up farre's patch and try to close this one while farre is on PTO? Thanks!

Assignee: afarre → smacleod
Flags: needinfo?(nkochar)

Updated the patch with nika's one suggestion and tested things out on try again, still looking good - queued for landing.

Pushed by smacleod@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2bd6606d7ec8 Check popup permission on window context in DoURILoad. r=nika
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: