Bug 1647454 - Check popup permission on window context in DoURILoad. r=nika

Depends on D86808

Differential Revision: https://phabricator.services.mozilla.com/D86828